# nanochat_mlx

./: .gitignore  LICENSE  README.md  pyproject.toml
nanochat_mlx/: __init__.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  execution.py  gpt.py  loss_eval.py  optim.py  report.py  tokenizer.py
runs/: dry_run.sh  small_test.sh  speedrun.sh
scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_sft.py  cleanup.py  dry_run.py
tasks/: arc.py  common.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
tests/: test_engine.py  test_model.py  test_optimizer.py  test_training.py
