[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nanochat-mlx"
version = "0.1.0"
description = "NanoChat ported to Apple MLX for M-series Macs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mlx>=0.22.0",
    "tiktoken>=0.8.0",
    "pyarrow>=14.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "safetensors>=0.4.0",
    "psutil>=5.9.0",
    "filelock>=3.12.0",
    "datasets>=2.14.0",
    "tokenizers>=0.15.0",
    "pyyaml>=6.0.0",
    "wandb>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
]
rustbpe = [
    "rustbpe>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["nanochat_mlx*", "scripts*", "tasks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
